# Echo

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  echo
DevPlan/: audit-report.md  desktop-app-dev-plan.md  document.tex  experiment-report-zh.md  experiment-report.md  launch-and-debug.md  proposal.tex  schema.md  signal-matrix.md  siri-app-ui-plan.md  siri-app-wireframes.md
DevPlan/experiment-figures/: charts.html  generate_html.py  generate_svg.py  metric2_deterministic.json  micrometrics.json  personamem_summary.json  personamem_summary_s7.json  personamem_summary_s8.json  personamem_summary_s9.json  prefeval_summary.json  prefeval_summary_s11.json  prefeval_summary_s12.json  prefeval_summary_s13.json  satisfaction_curve_ci.json  stats.json
desktop/Echo/: .gitignore  Package.swift  README.md
desktop/EchoSiri/: Package.swift  README.md
docs/: hermes-architecture.html
hermes_cli/: setup.py  skin_engine.py  web_server.py
plugins/echo_signals/: __init__.py  aux_config.py  baseline.py  confidence.py  confidence_actions.py  db.py  embeddings.py  judge.py  llm_cache.py  m1_nomination.py  m1_trigger.py  maintenance.py  nl_classifier.py  plugin.yaml  preference_rag.py  reason_scorer.py  schema.py  scope_clarify.py  scope_dialog.py  session_context.py  setup_wizard.py  signals.py  skill_dedup.py  skill_lock.py  (+1 more)
scripts/: verify_echo.py
tauri-shell/: README.md  package.json
tauri-shell/src-tauri/: Cargo.toml  tauri.conf.json
tauri-shell/src-tauri/src/: clipboard.rs  lib.rs  main.rs
tui_gateway/: server.py
ui-tui/: package-lock.json
(+165 files in other folders)
