[package]
name = "echo-shell"
version = "0.1.0"
edition = "2021"
authors = ["Echo project (Lingchao Nie + team), Westlake University"]
description = "Tauri desktop shell wrapping the Hermes Echo dashboard with clipboard + window-focus IPC."
license = "MIT"

[lib]
name = "echo_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
